refactor: changed get(0) to getFirst()